<?xml version="1.0" encoding="utf-8"?>

<!-- LinearLayout principale per la schermata di login -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/sfondo_login"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".Login">

    <!-- TextView per il titolo della schermata di login -->

    <TextView
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- TextInputLayout per l'inserimento dell'email -->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#000000">

        <!-- Campo di testo per l'email -->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:textColorHint="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="12dp"
            android:background="@drawable/login_input_edit_text"
            android:textColor="#000000"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- TextInputLayout per l'inserimento della password -->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#000000">

        <!-- Campo di testo per la password -->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="12dp"
            android:background="@drawable/login_input_edit_text"
            android:textColor="#000000"
            tools:ignore="VisualLintTextFieldSize"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- ProgressBar per indicare un caricamento in corso -->

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="#00FF00"/>

    <!-- Bottone per effettuare il login -->

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3A833C"
        android:text="@string/btn_login"
        android:textColor="#FFFFFF"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <!-- Link per la registrazione di un nuovo utente -->

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/registerNow"
        android:text="@string/click_to_register_two"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>